# python_pdm_example

./: README.asciidoc
package_a/: .pdm.toml  CMakeLists.txt  CrossToolchain.cmake  build.py  pyproject.toml
package_a/src/example_project/application_a/: dependency_a.py  project_a.py  pytestmodule.c
package_b/: build.py  pyproject.toml
package_b/src/example_project/application_b/: project_b.py
