[project]
name = "does_not_exist_on_pypi_project_a"
version = "0.1.1"
description = "Project A test case"
requires-python = ">=3.7"
keywords = ["test"]
authors = [
  {email = "john@doe.com"},
  {name = "John Doe"}
]
maintainers = [
  {name = "John Doe", email = "john@doe.com"}
]

dependencies = []

dynamic = []

[project.urls]
homepage = "https://example.com"
documentation = "https://readthedocs.org"
repository = "https://github.com"

[project.scripts]
project_a_cli = "example_project.application_a.project_a:cli"

[tool]
[tool.pdm]
includes = [
    "src/example_project",
]
source-includes = ["CMakeLists.txt", "src/**/*.c"]
package-dir = "src"
build = "build.py"

[build-system]
requires = ["pdm-pep517", "setuptools", "cmake_build_extension", "cmake", "ninja"]
build-backend = "pdm.pep517.api"
